# multirole_func

./: CMakeLists.txt  README.md  package.xml
include/multirole_func/: multirole.h  multirole_func.h
src/: multirole.cpp  multirole_func.cpp
