<?xml version="1.0"?>
<package format="2">
  <name>multirole_func</name>
  <version>0.0.0</version>
  <description>The multirole_func package</description>
  <maintainer email="danen@todo.todo">danen</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
